--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
     "require": {
         "php": "^7.2.5",
         "backpack/crud": "4.1.*",
+        "doctrine/dbal": "^3.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravel/framework": "4.1.*",
+        "doctrine/dbal": "v2.4.2"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
